# deta-file-api

./: README.md  lib.py  main.py  pyproject.toml
